# Win8DE

./: .gitignore  build.sh  install.sh  list-deps.sh  readme.md  readme.txt  uninstall.sh
Win8Corner/: CMakeLists.txt  main.cpp  main1.qml  main3.qml  main4.qml  resources.qrc
Win8Lock/: CMakeLists.txt  main.cpp  resources.qrc
Win8Lock/New/: VirtualKeyboard.qml  main.qml  main1.qml
Win8Lock/qml/: main.qml
Win8Lock/test/: pam_test  pam_test.cpp
Win8OSD/: CMakeLists.txt  Win8OSD-client.cpp  Win8OSD-server.cpp  main.qml  resources.qrc
Win8Running/: CMakeLists.txt  compile_commands.json  main.cpp  main.qml  resources.qrc
Win8Settings/: CMakeLists.txt  main.cpp  main.qml
Win8Start/: CMakeLists.txt  main.cpp  main.qml  main2.qml  resources.qrc  windowwatcher.cpp  windowwatcher.h
Win8Wall/: CMakeLists.txt  main.cpp  main.qml
assets/SDDM/Win8Login/: Main.qml  hyprsddm.conf  main.qml  metadata.desktop  theme.conf
assets/SDDM/Win8Login/labwc/: autostart  rc.xml
assets/labwc3/: autostart  environment  menu.xml  rc.xml  themerc  themerc-override
assets/wayland-sessions/: labwc-win8.desktop
battery/: CMakeLists.txt  compile_commands.json  main.cpp  main.qml  qml.qrc  resources.qrc
list-windows/: CMakeLists.txt  main.cpp
switcher/: CMakeLists.txt  compile_commands.json  main.cpp
switchgui/: CMakeLists.txt  compile_commands.json  main.cpp
tiles/Gwenview/: tile.qml
tiles/Spotify/: logic.py  tile.qml
tiles/weather/: tile.qml
